Fix alignment

--- a/WebToolsSource.styles.css
+++ b/WebToolsSource.styles.css
@@ -30,6 +30,7 @@ a:hover[b-rj70wt2z2a] {
 
 .input-item[b-9ebmqrjwno] {
     margin: 2px;
+    min-width: 80px;
 }
 
 .column-label[b-9ebmqrjwno] {
